<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="help_dialog_para_1">Thank you for using my app.If you have any questions, recommendations, or you run into a problem with the app, please do not hesitate to contact me by going to the \"Send Feedback\" option in the menu.</string>

    <string name="help_dialog_para_2">NetLive allows you to monitor your internet data transfer rate while also showing the app that is using the most data at the current moment. It runs both in the notification drawer or as a widget, so you always have access to your transfer rate information.</string>

    <string name="help_dialog_para_3">NetLive uses the official International System of Units (SI). This means, for example, that a kilobit is considered 1000 bits, not 1024 bits.</string>

    <string name="welcome">Thank you for using my app.\n\nIf you have any questions, recommendations, or you run into a problem with the app, please do not hesitate to contact me
			 		by going to the \"Send Feedback\" option in the menu.  Enjoy!</string>

    <string name="app_name">NetLive</string>
    <string name="action_settings_help">Help</string>
    <string name="action_settings_about">About</string>
    <string name="action_settings_send_feedback">Send Feedback</string>


    <string name="action_settings_rate_netlive">Rate NetLive</string>
    <string name="action_settings_share">Share</string>

    <string name="general_category">General</string>

    <string name="pref_title_show_total_value">Show total value</string>
    <string name="pref_summary_show_total_value">Show total speed beside upload and download speeds</string>

    <string name="pref_summary_hide_notification">Prevent the notification icon from displaying (requires Android 4.1+). This may cause notification to disappear entirely or reduce functionality of other expandable notifications.</string>
    <string name="pref_title_hide_notification">Hide notification icon</string>



    <string name="general_category_start_on_boot">Start on boot</string>
    <string name="pref_summary_auto_start">Prevent all transfer rate reporting in notification area (widgets must be deleted manually)</string>
    <string name="pref_title_auto_start">Disable</string>
   
    <string name="notification_drawer_category">Notification Drawer (pulldown area)</string>
    <string name="pref_title_measurement_unit">Unit of measure</string>
    <string name="pref_measurement_unit_summary"></string>
    <string name="pref_dialog_title_choose_measurement_unit">Choose measurement unit</string>
    <string name="pref_measurement_unit_default_value">Auto (Kbps, Mbps, Gbps)</string>
    
    <string name="pref_summary_show_mesurement_units">Display unit of measure beside transfer rates</string>
   	<string name="pref_title_show_mesurement_units">Display unit of measure</string>
   	
   	<string name="pref_title_values_to_display">Display transfer rates</string>
   	<string name="pref_screen_displayed_values_summary">Choose which transfer rates are displayed</string>
    
    <string name="pref_summary_show_measurement_unit_upload">Display upload transfer rate</string>
    <string name="pref_title_show_measurement_unit_upload">Upload</string>
    
    <string name="pref_summary_show_measurement_unit_download">Display download transfer rate</string>
    <string name="pref_title_show_measurement_unit_download">Download</string>
    
    <string name="pref_summary_show_measurement_unit_total">Display total transfer rate</string>
    <string name="pref_title_show_measurement_unit_total">Total</string>

    <string name="pref_summary_transfer_rate_names">Display total, upload, and download beside transfer rate</string>
    <string name="pref_title_transfer_rate_names">Display transfer rate label</string>
    
    <string name="notification_area_category">Notification area (notification bar)</string>
    <string name="pref_title_display_in_notification_area">Display transfer rate</string>
    <string name="pref_summary_display_in_notification_area">Display transfer rate in the notificaiton area</string>
    
    <string name="pref_measurement_unit_default_value_notification_area">Auto (Kbps, Mbps, Gbps)</string>
    
    <string name="pref_title_active_app">Display active app</string>
    <string name="pref_summary_active_app">Display the name of the app currently using the most data. Disabling this feature decreases battery usage.</string>
    
    
    <string name="pref_widget_category_general">General Widget Settings</string>
 
    <string name="pref_widget_display_unit_of_measure_title">Display Unit of Measure</string>
    <string name="pref_widget_display_unit_of_measure_summary">Display unit of measure above transfer rates</string>
    
    <string name="pref_widget_category_font">Font</string>
    
    <string name="pref_widget_title_font_style">Style</string>
    <string name="pref_widget_summary_font_style">Choose font style</string>
    <string name="pref_widget_dialog_font_style">Choose font style</string>
    
    <string name="pref_widget_title_font_size">Size</string>
    <string name="pref_widget_summary_font_size">Choose font size</string>
     <string name="pref_widget_dialog_font_size">Choose font size</string>
    
    <string name="pref_widget_title_font_color">Color</string>
    <string name="pref_widget_summary_font_color">Choose predefined font color</string>
    <string name="pref_widget_dialog_font_color">Choose font color</string>

    <string name="pref_title_poll_rate">Poll Rate</string>
    <string name="pref_summary_poll_rate">Choose how often NetLive updates, longer poll rates decrease battery usage (controls widgets too)</string>
    <string name="pref_dialog_title_poll_rate">Choose poll rate</string>
    
        
        
    
</resources>
